# Copyright 2017 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

static_library("core") {
  sources = [
    "consent_auditor.cc",
    "consent_auditor.h",
    "pref_names.c",
    "pref_names.h",
  ]

  deps = [
    "//components/prefs",
  ]
}

source_set("unit_tests") {
  testonly = true
  sources = [
    "consent_auditor_unittest.cc",
  ]

  deps = [
    ":core",
    "//components/prefs",
  ]
}
