# Copyright 2018 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

component("dbus_thread_linux") {
  sources = [
    "dbus_export.h",
    "dbus_thread_linux.cc",
    "dbus_thread_linux.h",
  ]
  defines = [ "COMPONENTS_DBUS_IMPLEMENTATION" ]
  deps = [
    "//base",
  ]
}
