# Copyright 2017 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

component("dbus_thread") {
  sources = [
    "dbus_thread.cc",
    "dbus_thread.h",
    "dbus_thread_export.h",
  ]

  defines = [ "DBUS_THREAD_IMPLEMENTATION" ]

  deps = [
    "//base",
  ]
}
