# Copyright 2017 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

if (is_android) {
  import("//build/config/android/config.gni")
  import("//build/config/android/rules.gni")
}

# TODO(dtrainor): Remove this file and have components_unittests depend on
# //components/download/internal:unit_tests directly.
group("unit_tests") {
  testonly = true

  deps = [
    "//components/download/internal:unit_tests",
  ]

  data_deps = [
    ":components_unittests_gtest_filter",
  ]
}

source_set("components_unittests_gtest_filter") {
  testonly = true

  data = [
    "components_unittests.filter",
  ]
}

if (is_android) {
  java_group("download_java") {
    deps = [
      "//components/download/internal:internal_java",
      "//components/download/public:public_java",
    ]
  }
}
